# MyCppTemlate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/drivers/: driver_test.cpp  driver_test.h
src/main/: main.cpp
